# vulnshield-platform

./: .env.example  .gitignore  GETTING_STARTED.md  Makefile  README.md  docker-compose.registry.yml  docker-compose.sandbox.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
agents/linux/: Dockerfile  agent.py  config.py  requirements.txt
agents/windows/: agent.py  collectors.ps1  config.py  install.ps1  (+1 more)
docs/: ADMIN_MANUAL.md  ARCHITECTURE.md  CAPABILITIES.md  DEPLOYMENT.md  DEVELOPER.md  ER_DIAGRAM.md  INSTALLATION.md  README.md  SANDBOX_DEPLOYMENT.md  USER_MANUAL.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
k8s/: configmap.yaml  infrastructure.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secrets.example.yaml  services.yaml
scripts/: build_all_services.py  deploy-pull.sh  deploy.sh  ensure-admin-password.sh  gen_remaining_services.py  gen_services_batch2.py  generate-sandbox-env.sh  generate_services.py  ollama-init.sh  publish-images.sh  run-benchmark.sh  wait-healthy.sh
shared/python/: pyproject.toml
shared/python/tests/: test_scan_sandbox.py
shared/python/vulnshield_common/: __init__.py  ai_orchestrator.py  auth.py  config.py  database.py  entity_reports.py  executive_pdf.py  fastapi_setup.py  llm.py  messaging.py  scan_sandbox.py  security.py  static_sast.py  storage.py
shared/python/vulnshield_common/scan_engines/: __init__.py  engines.py  httpx_probe.py  nmap_engine.py  nuclei_engine.py  semgrep_engine.py  zap_engine.py
(+177 files in other folders)
